    github.com/dustinkirkland/petname/petname.py.in => petname.py.in,
    github.com/dustinkirkland/petname/petname_test.go =>
    petname_test.go, github.com/dustinkirkland/petname/update.sh =>
    update.sh, Makefile, === removed directory github.com, === removed
    directory github.com/dustinkirkland, === removed directory
    github.com/dustinkirkland/petname, === renamed directory
    github.com/dustinkirkland/petname_cmd => cmd:
    - still rearranging source tree to make #go-nuts happy
  * debian/petname.install, === removed directory usr, === removed
    directory usr/lib, === removed directory usr/lib/petname, update.sh,
    usr/lib/petname/adjectives.txt => adjectives.txt,
    usr/lib/petname/adverbs.txt => adverbs.txt,
    usr/lib/petname/names.txt => names.txt:
    - still trying to make #go-nuts happy, moved txt files top level
  * === added directory cmd/petname, cmd/Makefile, cmd/petname_cmd.go =>
    cmd/petname/main.go, petname.go, petname.py, update.sh:
    - waddayaknow, #go-nuts suggests more changes
  * debian/golang-petname-dev.install:
    - update some paths
  * === added directory src, === added directory src/github.com, ===
    added directory src/github.com/dustinkirkland, === added symlink
    src/github.com/dustinkirkland/petname, cmd/petname/main.go,
    Makefile, === target is u../../../../petname:
    - asthetics aside, get the build actually working
  * === modified symlink src/github.com/dustinkirkland/petname, ===
    target changed u../../../../petname => u../../../:
    - fix symlink;  will have version during debuild
  * petname_test.go:
    - fix test syntax
  * debian/petname.install, debian/python-petname.install:
    - fix installs
  * petname.go, README.md, setup.py:
    - add a readme, and a python package setup
  * adjectives.txt, adverbs.txt:
    - fix capitlization, prune one line
    - prune hyphenated words

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 13 Dec 2014 11:27:59 -0600